--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-md-6 offset-md-3 text-center">
-    <h2>Weather Wiz</h2>
+    <h2>Weather Together</h2>
     <p>Let's check the weather... together!</p>
   </div>
 </div>
