--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -8,33 +8,65 @@
   <div class="col-md-6 offset-md-3 text-center">
     <%= form_tag weather_check_path do %>
       <div class="form-group">
-        <%= text_field_tag :address, nil, placeholder: "Number & Street", class: "form-control" %>
-      </div>
-      <div class="form-group">
         <%= text_field_tag :city, nil, placeholder: "City", class: "form-control", id: "city_field" %>, 
         <%= select_tag :state, options_for_select(@states), include_blank: "State", class: "form-control", id: "state_field" %> 
       </div>
-      <%= submit_tag "Check It Out", class: "btn btn-primary" %>
+      <%= submit_tag "Check It!", class: "btn btn-primary" %>
     <% end %>
   </div>
 </div>
 
 <div class="row" id="weather_results">
-	<% if !@locations.empty? %>
-		<div class="card-deck">
-			<% @locations.reverse.each do |location| %>
-			  <div class="card text-center">
-			    <div class="card-top">
-			      <h4><%= "#{location.city}, #{location.state}" %></h4>
-			    </div>
-			    <div class="card-body">
-			      <h5><%= location.temperature %>&deg; F</h3>
-			      <p class="card-text">
-			      	<%= image_tag "http://openweathermap.org/img/w/#{location.weather_icon}.png", alt: "Weather image icon" %> <%= location.weather_words %>
-			      </p>
-			    </div>
-			  </div>
-			<% end %>
-		</div>
-	<% end %>
+	<div class="col-md-6 offset-md-3 text-center">
+		<% if user_signed_in? %>
+        <small>
+        	<%= link_to "Edit Account", edit_user_registration_path %> | <%= link_to "Sign Out?", destroy_user_session_path, method: :delete %>
+        </small>
+    <% else %>
+			<p class="results_warning">
+				Unregistered users will be limited to 5 searches,<br>
+				and results will only be saved for 5 minutes.<br>
+			</p>
+			<p class="results_warning">
+				Please <%= link_to "log in", log_in_path %> to save your searches.
+			</p>
+		<% end %>
+	</div>
 </div>
+
+<div class="row">
+	<div class="col-md-12">
+		<ul class="nav nav-pills mtop-25">
+			<% if user_signed_in? && !current_user.locations.empty? %>
+				<% current_user.locations.each do |location| %>
+				  <li class="nav-item">
+					  <%= link_to "#{location.city}, #{location.state}", wthr_chk_path(location_id: location.id), class: "nav-link" %>
+					</li>
+				<% end %>
+			<% else %>
+				<% @locations.each do |location| %>
+					<li class="nav-item">
+					  <%= link_to "#{location.city}, #{location.state}", wthr_chk_path(location_id: location.id), class: "nav-link" %>
+					</li>
+				<% end %>
+			<% end %>
+		</ul>
+	</div>
+</div>
+<% if @location != nil %>
+	<div class="row">
+		<div class="col-md-6 offset-md-3">
+			<div class="card text-center">
+			  <div class="card-top">
+			    <h4><%= "#{@location.city}, #{@location.state}" %></h4>
+			  </div>
+			  <div class="card-body">
+			    <h5><%= @location.temperature %>&deg; F</h3>
+			    <p class="card-text">
+			    	<%= image_tag "http://openweathermap.org/img/w/#{@location.weather_icon}.png", alt: "Weather image icon" %> <%= @location.weather_words %>
+			    </p>
+			  </div>
+			</div>
+		</div>
+	</div>
+<% end %>
